Migrate business logics from RUM webservice to rates update service (#1)
Description
-pom file uses 5.4.0
-Migrate business logics from RUM webservice to rates update service
-DB connection, spec inheritance and Jenkins error fix will be included in next CR

Link any related JIRA Issue
https://hertzdigital.atlassian.net/browse/RATE-2048